Build dual-interface social media dashboard with Tweets and Shorts views
- Add persistent left navigation sidebar with icons
- Implement mobile bottom navigation
- Create 3-column Tweets layout (Sidebar | Feed | Trending)
- Add Tweet composer with media action icons
- Build Tweet cards with engagement bar (Reply/Retweet/Like/Views/Share)
- Create Shorts view with 9:16 vertical scroll-snap viewport
- Add video overlay with action buttons (Like/Comments/Share/Music)
- Implement animated music track ticker
- Apply glassmorphism styling throughout
- Add responsive design for mobile and desktop
- Configure dark theme (OLED black/Deep Gray)
- Add smooth tab switching animations with Framer Motion
- Fix linting issues and code quality

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"],
-  "exclude": ["src/collaborative-agent", "scripts"]
+  "include": ["src"]
 }
