--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "collaborate": "tsx scripts/collaborate.ts",
-    "collaborate:auto": "AUTO_APPROVE=true tsx scripts/collaborate.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
